updates. stupid justin forgot to push Righttraingle changes